# scamp-rs

./: CODING_STANDARDS.md  Cargo.toml  CodeOfConduct.md  DEFICIENCIES.md  Dockerfile.interop-test  E2E_TEST_PLAN.md  HANDOFF.md  LICENSE  PUNCHLIST.md  README.md  REVIEW-CSHARP-v2.md  REVIEW-CSHARP-v3.md  REVIEW-CSHARP.md  REVIEW-ELEGANCE-v2.md  REVIEW-ELEGANCE-v3.md  REVIEW-ELEGANCE.md  REVIEW-GO-v2.md  REVIEW-GO-v3.md  REVIEW-GO.md  REVIEW-JS-v2.md  REVIEW-JS-v3.md  REVIEW-JS.md  REVIEW-PERL-v2.md  REVIEW-PERL-v3.md  REVIEW-PERL.md  REVIEW-STANDARDS-v2.md  REVIEW-STANDARDS-v3.md  REVIEW-STANDARDS.md
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: Beepish.md  ServiceInfo.md
examples/: sample_service.rs
prompts/: 00-cleanup-and-interop-fix.md  01-transport-core.md  02-service-infrastructure.md  03-security.md  04-discovery.md  05-hardening.md  06-review-protocol-correctness.md  07-review-security.md  08-review-async-architecture.md  09-test-unit.md  10-test-integration.md  11-test-fuzz-and-stress.md  AGENT-KICKOFF.md  README.md
sample-service/: Cargo.toml
sample-service/src/: main.rs
sample-service/src/actions/: mod.rs
sample-service/src/actions/api/: status.rs
sample-service/src/actions/background/: worker.rs
sample-service/src/actions/constant/ship/: carrier.rs
sample-service/src/actions/order/: shipment.rs
sample-service/src/actions/scamp_rs_test/: mod.rs
samples/: service_info_packet_v3_data_parsed.json  soa.conf
scamp/: Cargo.toml
scamp-cli/: Cargo.toml
scamp-cli/src/: list.rs  main.rs  request.rs
scamp-macros/: Cargo.toml
scamp-macros/src/: lib.rs
scamp/samples/: discovery_cache_file  service_info_packet_v3_data.json  service_info_packet_v3_full.txt
scamp/src/: discovery.rs  requester.rs  rpc_support.rs  transport.rs
scamp/tests/: rpc_macro_test.rs
scripts/: build-linux.sh
src/: action.rs  bus_info.rs  config.rs  crypto.rs  discovery.rs  error.rs  lib.rs  message.rs  packet.rs  requester.rs  rpc_support.rs  service.rs  test_helpers.rs  transport.rs
src/agent/: message.rs  mod.rs
src/auth/: authorized_services.rs  authz.rs  mod.rs  ticket.rs
src/common/: mod.rs  never.rs  payload.rs
src/discovery/: announcement.rs  cache.rs  cache_file.rs  directory.rs  observer.rs  packet.rs  service_info.rs  service_registry.rs
tests/: basic_service.rs  e2e_full_stack.rs  rpc_macro_test.rs
(+54 files in other folders)
