[package]
name = "scamp"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2021"

[dependencies]
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
net2 = { version = "0.2.32", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
serde_json = "1.0.120"
regex = "1.10.5"
once_cell = "1.19.0"
itertools = "0.13.0"
