[package]
name = "scamp"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2021"

[dependencies]
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
serde_json = "1.0.120"
regex = "1.10.5"
once_cell = "1.19.0"
itertools = "0.13.0"
clap = { version = "4.5.9", features = ["derive"] }
dotenv = "0.15.0"
homedir = "0.3.3"
anyhow = "1.0.86"
log = "0.4.22"
term-table = "1.4.0"
rand = "0.8.5"
tokio-native-tls = "0.3.1"
