[package]
name = "sample-service"
version = "0.1.0"
edition = "2021"

[dependencies]
scamp = { path = ".." }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openssl = "0.10"
inventory = "0.3"
