[package]
name = "scamp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scamp"
path = "src/main.rs"

[dependencies]
scamp = { path = "../scamp" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
term-table = "1.4.0"
